--- a/jlanches.css
+++ b/jlanches.css
@@ -2,23 +2,32 @@
 *{
     padding: 0px;
     margin: 0px;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+html{
+    height: 100vh;
 }
 
 body{
     color: white;
     background-color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 100vw;
-    height: 100vh;
+    background-position: center center;
 }
 
 header div h1{
+    padding-top: 20px;
     font-family: Bungee Outline, Arial, Helvetica, sans-serif;
     font-size: 2.5em;
 }
+.container{
+    padding: 40px 10px;
+}
 nav a{
-    font-size: 0.8em;
+    font-size: 1em;
     color: chartreuse;
+   
 }
 
 nav a:hover{
@@ -30,18 +39,20 @@ ul{
     justify-content: space-between;
     list-style: none;
     align-items: center;
-    padding: 16px;
+    padding: 20px 0px;
 }
-
 
 header div h2{
     color: orange;
     font-size: 2em;
+    padding-top: 20px;
 }
-header img{
+
+header img{   
+    
     width: 120px;
     height: 120px;
-    border-radius: 50px;
+    border-radius: 25px;
 }
 
 .center{
@@ -63,13 +74,13 @@ section div img{
     max-width: 100vw;
     display: flex;
     margin: auto;
-    
-
 }
+
 section p{
     padding-top: 30px;
     text-align: center;
 }
+
 section h3{
     padding-top: 60px;
     text-align: center;
@@ -82,11 +93,9 @@ footer{
 
 footer div img{
     padding: 15px;
-    width: 40px;
-    height: 40px;   
+    width: 60px;
+    height: 60px;   
     
 }
-.container{
-    padding: 0px 50px;
-}
+
 
